# rann

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/rann/: backend.hpp  visibility_control.h
include/rann/nodes/: camera.hpp  gaussian_splat.hpp  information_analysis.hpp
include/rann/tools/: type_adapters.hpp
launch/: camera_launch.py
src/: backend.cpp  camera_node.cpp
src/nodes/: camera.cpp  gaussian_splat.cpp  information_analysis.cpp
